fix: use trim + isEmpty to support java 8